kubernetes/main/apps/frontend/homepage/app/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  annotations:
    external-dns.kubernetes.io/target: internal.haynesops
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`homepage.haynesops.com`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: homepage
          port: 3000
  tls:
    secretName: certificate-haynesops
